...
    "name": "Bowen, Chris, MP",
    "party": "ALP",
    "speeches": 311,
    "photoId": ""
  },
  {
    "name": "Albanese, Anthony, MP",
    "party": "ALP",
    "speeches": 305,
    "photoId": ""
  },
  {
    "name": "Rudd, Kevin, MP",
...
